<resources>
    <string name="app_name">GoToTrip</string>

    <!--BaseActivity-->
    <string name="label_loading_progress_dialog">Идёт загрузка данных, ожидайте..</string>

    <!--LoginActivity-->

    <string name="hint_email_login_a">Эл. почта</string>
    <string name="hint_password_login_a">Пароль</string>
    <string name="btn_login_login_a">Войти</string>
    <string name="tv_register_login_a">Регистрация</string>
    <string name="sw_remember_me_login_a">Запомнить меня</string>

    <string name="toast_success_login_a">Вы успешно авторизованы</string>
    <string name="toast_failed_login_a">Ошибка авторизации</string>

    <string name="er_empty_fields_login_a">Поля не заполнены</string>
    <string name="er_no_correct_login_a">Поля заполнены не корректно</string>

    <!--RegisterActivity-->

    <string name="hint_email_register_a">Эл. почта</string>
    <string name="hint_password_register_a">Пароль</string>
    <string name="hint_rep_password_register_a">Имя</string>
    <string name="tv_login_register_a">Войти</string>
    <string name="btn_register_register_a">Зарегистрироваться</string>

    <string name="toast_success_register_a">Вы успешно зарегисрированы</string>
    <string name="toast_failed_register_a">Ошибка регистрации</string>

    <string name="er_empty_fields_register_a">Поля не заполнены</string>
    <string name="er_no_correct_register_a">Поля заполнены не корректно</string>

    <!--MenuMainActivity-->
    <string name="profile_main_menu_item">Мой профиль</string>
    <string name="chat_main_menu_item">Сообщения</string>
    <string name="new_post_main_menu_item">Создать пост</string>
    <string name="search_main_menu_item">Поиск</string>
    <string name="settings_main_menu_item">Настройки</string>
    <string name="log_out_main_menu_item">Выйти</string>

    <!--MenuMainActivityHeader-->
    <string name="name_header_menu_item">Иванов Иван</string>
    <string name="email_header_menu_item">example@example.com</string>
    <string name="toggle_open_main_a">open</string>
    <string name="toggle_close_main_a">close</string>

    <!--EditProfileActivity-->
    <string name="hint_name_edit_profile_a">Имя</string>
    <string name="hint_country_from_edit_profile_a">Страна</string>
    <string name="hint_city_from_edit_profile_a">Город</string>
    <string name="hint_about_edit_profile_a">О себе</string>
    <string name="hint_list_interesting_edit_profile_a">Интересы </string>
    <string name="hint_list_country_edit_profile_a">Посещенные страны</string>
    <string name="tv_btn_save_profile_a">Сохранить</string>

    <string name="er_failed_avatar_edit_profile_a">Ошибка загрузки фото</string>
    <string name="toast_success_saving_info_edit_profile_a">Данные успешно сохранены</string>


    <!--SearchActivity-->
    <string name="et_hint_search_search_activity">Введите имя ... </string>

    <!--SearchActivityRecyclerViewUsers-->
    <string name="tv_name_user_i_rv_search">Иванов Иван</string>
    <string name="tv_country_city_i_rv_search">Россия,Ульяновск</string>

    <!--ViewProfileActivity-->
    <string name="tv_name_user_view_profile_a">Иванов Иван</string>
    <string name="btn_chat_user_view_profile_a">Сообщение</string>
    <string name="btn_follow_on_user_view_profile_a">Подписаться</string>
    <string name="btn_follow_off_user_view_profile_a">Отписаться</string>
    <string name="btn_follow_follow_on_user_view_profile_a">Вы подписаны</string>
    <string name="btn_followers_view_profile_a">%1$d \n Подписчики</string>
    <string name="btn_followings_user_view_profile_a"> %1$d \n Подписки</string>
    <string name="btn_posts_user_view_profile_a">%1$d \n Посты</string>
    <string name="tv_my_info_user_view_profile_a">Личная информация</string>
    <string name="tv_location_user_view_profile_a">Россия, Ульяновск</string>
    <string name="tv_visited_country_view_profile_a">Китай, Китай, Китай, Китай</string>
    <string name="tv_about_me_view_profile_a">Много много много всего интересного, просто, очень много всего, вы себе не представяете, да, вот  такой интересный человек, понимаю, трудно поверить</string>
    <string name="tv_interests_user_view_profile_a">Вышивание, рисование , книги</string>

    <!--DialogActivity-->
    <string name="tv_name_user_dialog_a">Иван Иванов</string>
    <string name="hint_text_message_dialog_a">Введите сообщение...</string>
    <string name="tv_empty_dialog_dialog_a">В данном диалоге отсутвуют сообщения \n\n Напишите первым!</string>
    <string name="toast_end_old_messages_dialog_a">Загружены все сообщения!</string>
    <!--DialogActivityRecuclerView -->
    <string name="tv_message_rv_dialog_item">Приветвую! Как ваши дела? Куда летали? </string>
    <string name="tv_date_rv_dialog_item">12:00 01-01-2018</string>

    <!--ChatActivityRecyclerView-->
    <string name="tv_name_interlocutor_chat_item">Иванов Иван</string>
    <string name="tv_last_message_chat_chat_item">Приветвую! Как ваши дела? Куда летали? </string>

    <!--NewPostActivity-->
    <string name="hint_et_title_new_post_a">Заголовок</string>
    <string name="et_description_trip_new_post_a">Описание путешествия</string>
    <string name="btn_add_post_new_post_a">Добавить</string>
    <string name="er_failed_upload_photo_new_post_a">Ошибка загрузки фотографии</string>
    <string name="er_no_uploaded_photo_new_post_a">Ошибка.Загрузите фотографию</string>
    <string name="success_add_post_new_post_a">Запись добавлена</string>
    <string name="item_confirm_adding_post_new_post_a">Добавить</string>
    <string name="title_toolbar_new_post">Добавить запись</string>
    <string name="tv_hint_date_new_post_a">Дата</string>
    <string name="tv_date_value_new_post_a">Сейчас</string>
    <string name="dialog_add_post_title_new_post_a">Добавление записи</string>
    <string name="dialog_add_post_content_new_post_a">Загрузка изображений</string>
    <string name="dialog_add_post_btn_positive_new_post_a">ok</string>
    <string name="dialog_add_post_btn_negative_new_post_a">отмена</string>
    <string name="dialog_add_post_success_upload_new_post_a">Пост успешно добавлен!</string>

    <!--PostRecyclerView-->
    <string name="tv_name_author_rv_post_item">Иванов Иван</string>
    <string name="tv_date_post_rv_post_item">30 февраля</string>
    <string name="tv_title_rv_post_item">Заголовок интересный</string>
    <string name="tv_text_post_rv_post_item">Очень крутой рассказ о путешесвии,просто отличный, интресный и познавательный, прям жесть какой интересный, вам такой и не увидеть никогда
    Очень крутой рассказ о путешесвии,просто отличный, интресный и познавательный, прям жесть какой интересный, вам такой и не увидеть никогда</string>
    <string name="tv_count_likes_rv_post_item">100</string>
    <string name="tv_count_comments_rv_post_item">100</string>

    <!--ViewPostActivity-->
    <string name="tv_name_author_view_post_a">Иванов Иван</string>
    <string name="tv_date_post_view_post_a">30 февраля</string>
    <string name="tv_title_rv_view_post_a">Заголовок интересный</string>
    <string name="tv_text_post_view_post_a">Очень крутой рассказ о путешесвии,просто отличный, интресный и познавательный, прям жесть какой интересный, вам такой и не увидеть никогда
    Очень крутой рассказ о путешесвии,просто отличный, интресный и познавательный, прям жесть какой интересный, вам такой и не увидеть никогда</string>
    <string name="tv_count_likes_view_post_a">100</string>
    <string name="tv_count_comments_view_post_a">100</string>
    <string name="tv_count_view_view_post_a">100</string>

    <!--ListCommentsActivity-->
    <string name="hint_text_comment_list_comments_a">Введите текст комментария...</string>

    <!--CommentRecyclerView-->
    <string name="tv_name_author_rv_comment_item">Иван Иванов</string>
    <string name="tv_date_comment_rv_comment_item">12-01-2018</string>
    <string name="tv_text_comment_rv_comment_item">Очень клевый комментарий,захватывающий как моя жизнь (шутка)</string>

    <!--PickLocationActivity-->
    <string name="tv_toolbar_choose_location_pick_location_a">Выбор локации</string>
    <string name="btn_choose_location_pick_location_a">Выберите локацию</string>
    <string name="btn_choosed_location_pick_location_a">Локация выбрана</string>
    <string name="item_confirm_location_pick_location_a">Выбрать</string>
    <string name="toast_choose_location_pick_location_a">Выберите локацию</string>

</resources>
