<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_nav_main"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_main_menu_item" />
    <item
        android:id="@+id/search_nav_main"
        android:icon="@drawable/ic_search"
        android:title="@string/search_main_menu_item" />
    <item
        android:id="@+id/chat_nav_main"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_main_menu_item" />
    <item
        android:id="@+id/new_post_nav_main"
        android:icon="@drawable/ic_new_post"
        android:title="@string/new_post_main_menu_item" />
    <item
        android:id="@+id/settings_nav_main"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_main_menu_item" />
    <item
        android:id="@+id/log_out_nav_main"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/log_out_main_menu_item" />
</menu>