<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_recycler_view_chat_item">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar_author_rv_comment_item"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/no_avatar" />

    <TextView
        android:id="@+id/tv_name_author_rv_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/tv_name_author_rv_comment_item"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_author_rv_comment_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_comment_rv_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_date_comment_rv_comment_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_comment_rv_comment_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:text="@string/tv_text_comment_rv_comment_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_author_rv_comment_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_author_rv_comment_item" />
</android.support.constraint.ConstraintLayout>