<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@drawable/corner_card_view"
    tools:context="com.androiddev.artemqa.gototrip.modules.viewPost.view.ViewPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_author_avatar_view_post_a"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/no_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_author_view_post_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/tv_name_author_rv_post_item"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_author_avatar_view_post_a"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date_post_view_post_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/tv_date_post_rv_post_item"
                app:layout_constraintStart_toEndOf="@+id/iv_author_avatar_view_post_a"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_author_view_post_a" />

            <TextView
                android:id="@+id/tv_title_view_post_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_title_rv_post_item"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_author_avatar_view_post_a" />

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mv_current_post_map_view_post_a"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_view_post_a" />
            <com.felipecsl.asymmetricgridview.library.widget.AsymmetricGridView
                android:id="@+id/agv_image_post_view_post_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mv_current_post_map_view_post_a"/>

            <TextView
                android:id="@+id/tv_text_post_view_post_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_text_post_view_post_a"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agv_image_post_view_post_a" />

            <Button
                android:id="@+id/btn_like_view_post_a"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_no_corner_style"
                android:drawableLeft="@drawable/ic_like_off"
                android:text="@string/tv_count_likes_view_post_a"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_post_view_post_a"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_comment_view_post_a"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_no_corner_style"
                android:drawableLeft="@drawable/ic_comment"
                android:text="@string/tv_count_comments_view_post_a"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_like_view_post_a"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_post_view_post_a"
                app:layout_constraintVertical_bias="1.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>