<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androiddev.artemqa.gototrip.modules.viewProfile.view.VIewProfileActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cl_avatar_place_view_profile_a"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:context="com.androiddev.artemqa.gototrip.modules.viewProfile.view.VIewProfileActivity">

        <ImageView
            android:id="@+id/iv_avatar_user_view_profile_a"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_avatar" />

        <TextView
            android:id="@+id/tv_name_user_view_profile_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_name_user_view_profile_a"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_chat_user_view_profile_a"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_chat_user_view_profile_a"
        android:background="@drawable/button_corner_blue_style"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/cl_avatar_place_view_profile_a" />

    <Button
        android:id="@+id/btn_follow_off_user_view_profile_a"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_corner_blue_style"
        android:text="@string/btn_follow_off_user_view_profile_a"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_avatar_place_view_profile_a" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_chat_user_view_profile_a">

        <Button
            android:id="@+id/btn_posts_user_view_profile_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_no_corner_style"
            android:text="@string/btn_posts_user_view_profile_a" />

        <Button
            android:id="@+id/btn_followers_view_profile_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_no_corner_style"
            android:text="@string/btn_followers_view_profile_a" />

        <Button
            android:id="@+id/btn_followings_user_view_profile_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_no_corner_style"
            android:text="@string/btn_followings_user_view_profile_a" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>



<!--<android.support.design.widget.CoordinatorLayout-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:background="@android:color/background_light"-->
<!--android:fitsSystemWindows="true">-->

<!--<android.support.design.widget.AppBarLayout-->
    <!--android:id="@+id/main.appbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="300dp"-->
    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <!--android:fitsSystemWindows="true"-->
    <!--&gt;-->

    <!--<android.support.design.widget.CollapsingToolbarLayout-->
        <!--android:id="@+id/main.collapsing"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:contentScrim="?attr/colorPrimary"-->
        <!--app:expandedTitleMarginStart="48dp"-->
        <!--app:expandedTitleMarginEnd="64dp"-->
        <!--&gt;-->

        <!--<ImageView-->
            <!--android:id="@+id/main.backdrop"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:fitsSystemWindows="true"-->
            <!--android:src="@drawable/material_flat"-->
            <!--app:layout_collapseMode="parallax"-->
            <!--/>-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/main.toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--app:layout_collapseMode="pin"-->
            <!--/>-->
    <!--</android.support.design.widget.CollapsingToolbarLayout>-->
<!--</android.support.design.widget.AppBarLayout>-->

<!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->


<!--</android.support.v4.widget.NestedScrollView>-->


<!--</android.support.design.widget.CoordinatorLayout>-->