<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.newPost.view.NewPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mv_new_place_location_new_post_a"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                mapbox:mapbox_styleUrl="@string/mapbox_style_satellite_streets"

                mapbox:mapbox_uiRotateGestures="false"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_title_new_post_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mv_new_place_location_new_post_a">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_title_new_post_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_et_title_new_post_a" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_images_place_new_post_a"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_description_text_new_post_a" />

            <EditText
                android:id="@+id/et_description_text_new_post_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/et_description_trip_new_post_a"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_title_new_post_a" />

            <Button
                android:id="@+id/btn_add_post_new_post_a"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/button_corner_blue_style"
                android:text="@string/btn_add_post_new_post_a"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
